# 2025-NKU-cpp-homework

./: CMakeLists.txt  README.md  ResNet_cpp.py  big homework.code-workspace  build.bat  main.cpp  main.exp
mlp/: MNISTDataset.h  cpp from the scrach.code-workspace  main.lib
